<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#355136"
    tools:context=".FragmentChapter1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/chapter1_name"
            android:textAlignment="center"
            android:textColor="#F4EFBB"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewS1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/almendra_sc"
                    android:text="@string/chapter1_subtitle1"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:stretchColumns="*">


                    <TableRow android:background="#518053">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/row1_name"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/chapter1_subtitle1_attribute1"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />
                    </TableRow>


                    <TableRow android:background="#518053">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/row2_name"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/chapter1_subtitle1_attribute2"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />
                    </TableRow>


                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="239dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewS1B2"
                        android:layout_width="173dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/almendra_sc"
                        android:text="@string/chapter1_subtitle1_body2"
                        android:textAlignment="textEnd"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/chapter1_subtitle1"
                        android:src="@drawable/img_13" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewS1B1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/chapter1_subtitle1_body"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewS2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/almendra_sc"
                    android:text="@string/chapter1_subtitle2"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp" />

                <TableLayout
                    android:id="@+id/tableLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:stretchColumns="*">


                    <TableRow android:background="#518053">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/row1_name"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/chapter1_subtitle2_attribute1"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />
                    </TableRow>


                    <TableRow android:background="#518053">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/row2_name"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/chapter1_subtitle2_attribute2"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />
                    </TableRow>


                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="239dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewS2B2"
                        android:layout_width="173dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/almendra_sc"
                        android:text="@string/chapter1_subtitle2_body2"
                        android:textColor="#FFFFFF"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="265dp"
                        android:contentDescription="@string/chapter1_subtitle2"
                        android:src="@drawable/img_2" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewS2B1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/chapter1_subtitle2_body"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="314dp"
                    android:contentDescription="@string/c1_s2_img_description"
                    android:src="@drawable/img_1" />

                <TextView
                    android:id="@+id/textViewS2B3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/chapter1_subtitle2_body3"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewS3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/almendra_sc"
                        android:text="@string/chapter1_subtitle3"
                        android:textColor="#FFFFFF"
                        android:textSize="34sp" />

                    <TableLayout
                        android:id="@+id/tableLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:stretchColumns="*">


                        <TableRow android:background="#518053">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif"
                                android:text="@string/row1_name"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif"
                                android:text="@string/chapter1_subtitle3_attribute1"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp" />
                        </TableRow>


                        <TableRow android:background="#518053">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif"
                                android:text="@string/row2_name"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif"
                                android:text="@string/chapter1_subtitle3_attribute2"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp" />
                        </TableRow>


                    </TableLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="239dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewS3B2"
                            android:layout_width="173dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/almendra_sc"
                            android:text="@string/chapter1_subtitle3_body2"
                            android:textColor="#FFFFFF"
                            android:textAlignment="textEnd"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/chapter1_subtitle3"
                            android:src="@drawable/img_3" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textViewS3B1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/chapter1_subtitle3_body"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>